[package]
name = "witchcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaxpeax-arch = "0.2.5"
thiserror = "1.0"
goblin = "0.4"
memoffset = "0.8.0"
lazy_static = "1.4.0"
linkme = "0.3.9"

[dependencies.yaxpeax-x86]
version = "1.0.4"
features = ["fmt"]
path = "../yaxpeax-x86" # FIXME when yax x86 1.1 comes out


